src/tui/tests/snapshots/keyring_cli__tui__tests__wizard_snapshot_tests__wizard_back_navigation_snapshots-2.snap
---
source: src/tui/tests/wizard_snapshot_tests.rs
expression: state
---
WizardState {
    step: PasskeyConfirm,
    passkey_choice: Some(
        GenerateNew,
    ),
    passkey_words: Some(
        [
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
        ],
    ),
    master_password: Some(
        "secure_password_123",
    ),
    confirmed: true,
    keystore_path: None,
    error: None,
}
