src/tui/tests/snapshots/keyring_cli__tui__tests__wizard_snapshot_tests__wizard_complete_state_snapshot.snap
---
source: src/tui/tests/wizard_snapshot_tests.rs
expression: state
---
WizardState {
    step: Complete,
    passkey_choice: Some(
        GenerateNew,
    ),
    passkey_words: Some(
        [
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
            "word",
        ],
    ),
    master_password: Some(
        "secure_password_123",
    ),
    master_password_confirm: None,
    verify_positions: None,
    verify_answers: None,
    password_policy: PasswordPolicyConfig {
        default_type: Random,
        default_length: 16,
        min_digits: 2,
        min_special: 1,
    },
    clipboard_timeout: Seconds30,
    trash_retention: Days30,
    skip_import: true,
    confirmed: false,
    keystore_path: None,
    error: None,
}
