src/tui/tests/snapshots/keyring_cli__tui__tests__wizard_snapshot_tests__wizard_error_handling_snapshots-2.snap
---
source: src/tui/tests/wizard_snapshot_tests.rs
expression: state
---
WizardState {
    step: Welcome,
    passkey_choice: None,
    passkey_words: None,
    master_password: None,
    confirmed: false,
    keystore_path: None,
    error: None,
}
