src/tui/tests/snapshots/keyring_cli__tui__tests__wizard_snapshot_tests__wizard_generate_flow_snapshots-2.snap
---
source: src/tui/tests/wizard_snapshot_tests.rs
expression: state
---
WizardState {
    step: PasskeyGenerate,
    passkey_choice: Some(
        GenerateNew,
    ),
    passkey_words: Some(
        [
            "abandon",
            "ability",
            "able",
            "about",
            "above",
            "absent",
            "absorb",
            "abstract",
            "absurd",
            "abuse",
            "access",
            "accident",
            "account",
            "accuse",
            "achieve",
            "acid",
            "acoustic",
            "acquire",
            "across",
            "act",
            "action",
            "actor",
            "actress",
            "actual",
        ],
    ),
    master_password: None,
    confirmed: false,
    keystore_path: None,
    error: None,
}
